--- a/packages/map-nav/public/demo.html
+++ b/packages/map-nav/public/demo.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>PageHeaderFixed demo</title>
 
-<script src="../dist/PageHeaderFixed.umd.js"></script>
+<script src="https://cdn.cbd.int/@scbd/map-nav@0.0.1"></script>
 
 
 
@@ -18,7 +18,7 @@ Vue.use(i18n)
 new Vue({
   i18n,
   components: {
-    demo: PageHeaderFixed
+    demo: MapNav
   }
 }).$mount('#app')
 </script>
