--- a/packages/page-header-fixed/demo/widget.html
+++ b/packages/page-header-fixed/demo/widget.html
@@ -13,7 +13,7 @@
     </noscript>
     <div>
       
-    <script id="page-header-fixed"  src="https://cdn.cbd.int/@scbd/page-header-fixed@0.0.4/dist/widget/PageHeaderFixedWidget.umd.min.js" charset="utf-8"></script>
+    <script id="page-header-fixed"  src="https://cdn.cbd.int/@scbd/page-header-fixed@0.0.8/dist/widget/PageHeaderFixedWidget.umd.js" charset="utf-8"></script>
 
   </div>
   </body>
