--- a/packages/map-nav/public/demo.html
+++ b/packages/map-nav/public/demo.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>PageHeaderFixed demo</title>
 
-<script src="https://cdn.cbd.int/@scbd/map-nav@0.0.1"></script>
+<script src="https://cdn.cbd.int/@scbd/map-nav@0.0.13/dist/MapNav.umd.js"></script>
 
 
 
