--- a/packages/map-nav/public/widget.html
+++ b/packages/map-nav/public/widget.html
@@ -13,7 +13,7 @@
     </noscript>
     <div>
       
-    <script id="map-nav" width="500" height="250" src="../dist/widget/MapNavWidget.umd.js" charset="utf-8"></script>
+    <script id="map-nav" width="500" height="250" src="https://cdn.cbd.int/@scbd/map-nav@0.0.14/dist/widget/MapNavWidget.umd.js" charset="utf-8"></script>
 
   </div>
   </body>
