page-header-fixed

--- a/packages/page-header-fixed/demo/demo.html
+++ b/packages/page-header-fixed/demo/demo.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>PageHeaderFixed demo</title>
 
-<script src="./PageHeaderFixed.umd.js"></script>
+<script src="../dist/PageHeaderFixed.umd.js"></script>
 
 
 
