--- a/packages/self-embedding-component/public/index.html
+++ b/packages/self-embedding-component/public/index.html
@@ -12,6 +12,6 @@
       <strong>We're sorry but self-embeding-widget doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script id="map-nav" src="../dist/test/widget.umd.js"  search="?ssss="></script>
+    <script id="map-nav" src="./widget.umd.js"  search="?ssss="></script>
   </body>
 </html>
