--- a/packages/www-css/public/index.html
+++ b/packages/www-css/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script id="map-nav" src="./widget.umd.js"  search="?ssss="></script>
   </body>
 </html>
